@@ -1,3 +1,4 @@
+ - Fix memory leak in mesh (data not deleted correctly in MeshTopology)
 0.6.3 [2006-10-27]
  - Move to new mesh library
  - Remove dolfin-config and move to pkg-config
